--- a/usersApp/package.json
+++ b/usersApp/package.json
@@ -1,15 +1,16 @@
 {
   "name": "usersapp",
   "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev":"node --watch server.js"
+    "dev": "node --watch server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.13.0"
