--- a/usersApp/.env
+++ b/usersApp/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = "mongodb+srv://george6627:7qKWuXYsSGf39NfC@cluster0.7dre2.mongodb.net/codingfactory?retryWrites=true&w=majority"
+MONGODB_URI = mongodb+srv://george6627:7qKWuXYsSGf39NfC@cluster0.7dre2.mongodb.net/codingfactory?retryWrites=true&w=majority
